@@ -10,6 +10,8 @@
     <!-- bower:css -->
     <!-- endbower -->
     <link rel="stylesheet" href="bower_components/openlayers3/build/ol.css" />
+    <!-- should be inserted by bower, but is'nt -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -89,11 +91,11 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/spin-js/spin.js"></script>
     <script src="bower_components/proj4/dist/proj4.js"></script>
     <script src="bower_components/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <script src="bower_components/openlayers3/build/ol-debug.js"></script>
     <!-- endbuild -->
