@@ -18,71 +18,20 @@ angular.module('ubrGeoApp')
         width  = width_tot  - margin.left - margin.right,
         height = height_tot - margin.top  - margin.bottom;
 
-      var yearFormat = d3.time.format("%Y"); 
+      var yearFormat = d3.time.format('%Y'); 
     
       var x = d3.time.scale().range([0, width]),
           y = d3.scale.linear().range([height, 0]);
       
-      var xAxis = d3.svg.axis().scale(x).orient("bottom");
+      var xAxis = d3.svg.axis().scale(x).orient('bottom');
      
-
-      var brush = d3.svg.brush()
-          .x(x)
-          .on("brush", brushmove)
-          .on("brushstart", brushstart)
-          .on("brushend", brushend);
-
-      var year_min = d3.min(data.map(function(d) { return d.year; }));
-      var year_max = d3.max(data.map(function(d) { return d.year; }));
-      
-      if (scope.extent && scope.extent.length == 2) {
-        var x0 = ( scope.extent[0] - year_min ) / ( year_max - year_min);
-        var x1 = ( scope.extent[1] - year_min ) / ( year_max - year_min); 
-        brush.extent([x0,x1]);
-      } 
-
-
-      svg.attr("width",  width  + margin.left + margin.right)
-         .attr("height", height + margin.top  + margin.bottom);
-      
-      var context = svg.select('.data')
-          .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-
-      data.forEach(function(d) {d.year= yearFormat.parse(d.year.toString()) });      
-      x.domain(d3.extent(data.map(function(d) { return d.year; })));
-      y.domain([0, d3.max(data.map(function(d) { return d.count; }))]);
-
-      var barWidth = width / (year_max - year_min); 
-
-      context.selectAll("g").remove();
-      var bar = context.selectAll("g")
-          .data(data)
-          .enter().append("g")
-          .attr("transform", function(d, i) { 
-              return "translate(" + (x(d.year) -  barWidth/2) + ",0)"; 
-          });
-    
-      bar.append("rect")
-        .attr("y", function(d) { return y(d.count); })
-        .attr("height", function(d) { return height - y(d.count); })
-        .attr("width", barWidth - 0.5 );
-    
-      svg.select('.x-axis')
-          .attr('transform', 'translate(' + margin.left + ',' + (height + margin.top) + ')')
-          .call(xAxis);        
-      
-      context.append("g")
-        .attr("class", "x brush")
-          .call(brush)
-        .selectAll("rect")
-          .attr("y", -6)
-          .attr("height", height + 7);
-
       function brushend() {
           var yearExtent = brush.empty() ? x.domain() : brush.extent();
-          yearExtent = yearExtent.map(function(d){return yearFormat(d); });
-          console.log(yearExtent);
+          yearExtent = yearExtent.map(function(d){return parseFloat(yearFormat(d)); });
+          // this next 3 lines are important for clicking on brush background = clearing brush
+          scope.yearmin = yearExtent[0];
+          scope.yearmax = yearExtent[1];
+          scope.$apply();
           scope.action({ newExtent: yearExtent });
       }
 
@@ -100,7 +49,82 @@ angular.module('ubrGeoApp')
       function brushstart() {
         console.log('Start: ', brush.extent());
       }
-    }
+    
+
+      var brush = d3.svg.brush()
+          .x(x)
+          .on('brush', brushmove)
+          .on('brushstart', brushstart)
+          .on('brushend', brushend);
+
+      var year_min = d3.min(data.map(function(d) { return d.year; }));
+      var year_max = d3.max(data.map(function(d) { return d.year; }));
+      
+      if (scope.extent && scope.extent.length === 2) {
+        scope.yearmin = scope.extent[0];
+        scope.yearmax = scope.extent[1];
+        var x0 = ( scope.extent[0] - year_min ) / ( year_max - year_min);
+        var x1 = ( scope.extent[1] - year_min ) / ( year_max - year_min); 
+        brush.extent([x0,x1]);
+      } else {
+        scope.yearmin = year_min;
+        scope.yearmax = year_max;
+        console.log('Test: ', scope.yearmin,scope.yearmax); 
+      }
+
+
+      svg.attr('width',  width  + margin.left + margin.right)
+         .attr('height', height + margin.top  + margin.bottom);
+      
+      var context = svg.select('.data')
+          .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
+
+
+      data.forEach(function(d) {d.year = yearFormat.parse(d.year.toString()); });      
+      x.domain(d3.extent(data.map(function(d) { return d.year; })));
+      y.domain([0, d3.max(data.map(function(d) { return d.count; }))]);
+
+      var barWidth = width / (year_max - year_min); 
+
+      context.selectAll('g').remove();
+      var bar = context.selectAll('g')
+          .data(data)
+          .enter().append('g')
+          .attr('transform', function(d) { 
+              return 'translate(' + (x(d.year) -  barWidth/2) + ',0)'; 
+          });
+    
+      bar.append('rect')
+        .attr('y', function(d) { return y(d.count); })
+        .attr('height', function(d) { return height - y(d.count); })
+        .attr('width', barWidth - 0.5 );
+    
+      svg.select('.x-axis')
+          .attr('transform', 'translate(' + margin.left + ',' + (height + margin.top) + ')')
+          .call(xAxis);        
+      
+      context.append('g')
+        .attr('class', 'x brush')
+          .call(brush)
+        .selectAll('rect')
+          .attr('y', -6)
+          .attr('height', height + 7);
+       
+      scope.redrawExtent = function(newExtent) {
+        console.log('newExtent(redraw): ', newExtent);
+        if (newExtent[0] === year_min && newExtent[1] === year_max) {
+            brush.clear();
+        } else {
+            var yearExtent = newExtent.map(function(d) { return yearFormat.parse(d.toString()) });
+            console.log('yearExtent(redraw): ', yearExtent);
+            brush.extent(yearExtent);
+        }    
+        svg.select('.brush').call(brush);  // redraw brush
+      }
+
+       
+    };
+
     return {
       restrict: 'E',
       scope: {
@@ -108,8 +132,8 @@ angular.module('ubrGeoApp')
           extent: '=',
           action: '&'    
       },
-      template: '<div>Jahr der Karte: {{yearmin}} - {{yearmax}}</div>',
-      compile: function (element, attrs) {
+      templateUrl: 'views/yearrangeslider.html',
+      compile: function (element) {
         // Create a SVG root element
         var svg = d3.select(element[0]).append('svg');
 
@@ -119,10 +143,10 @@ angular.module('ubrGeoApp')
         // Define the dimensions for the slider
         var height = 140;
 
-
+        
         // Return the link function
-        return function(scope, element, attrs) { 
-
+        return function(scope, element) { 
+      
           // Watch the data attribute of the scope
           scope.$watch('data', function(newVal, oldVal, scope) {
   
@@ -132,6 +156,29 @@ angular.module('ubrGeoApp')
                 draw(svg, width, height, scope);
               }
           }, true);
+
+          scope.yearChanged = function() {
+              scope.yearmin = parseFloat(scope.yearmin);
+              scope.yearmax = parseFloat(scope.yearmax);
+
+                var year_min = d3.min(scope.data.map(function(d) { return d.year; }));
+                var year_max = d3.max(scope.data.map(function(d) { return d.year; }));
+                
+
+                if (isNaN(scope.yearmin) || scope.yearmin < year_min) {
+                    scope.yearmin = year_min;
+                }
+                if (isNaN(scope.yearmax) || scope.yearmax > year_max) {
+                    scope.yearmax = year_max;
+                }
+                if (scope.extent[0] !== scope.yearmin || scope.extent[1] !== scope.yearmax ) {
+                    var newExtent = [scope.yearmin, scope.yearmax];
+                    console.log('newExtent (nach action1): ',newExtent);
+                    scope.action({ newExtent: newExtent });
+                    console.log('newExtent (nach action2): ',newExtent);
+                    scope.redrawExtent(newExtent);
+                }
+          }
 
           angular.element($window).bind('resize', function () {
               if (angular.isArray(scope.data)) {
