@@ -7,6 +7,9 @@
  * # d3
  * Factory in the ubrGeoApp.
  */
+
+/*global d3*/
+
 angular.module('ubrGeoApp')
   .factory('d3', function () {
     return d3;
