@@ -16,7 +16,7 @@ angular.module('ubrGeoApp')
         return angular.isArray(extent) && extent.length === 4 &&
             angular.isNumber(extent[0]) && angular.isNumber(extent[1]) &&
             angular.isNumber(extent[2]) && angular.isNumber(extent[3]);
-    }
+    };
 
     return factory;
   });
