@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
+    "bootstrap": "~3.3.5",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
@@ -13,13 +13,14 @@
     "angular-bootstrap": "~0.12.1",
     "proj4": "~2.3.6",
     "angular-openlayers-directive": "https://github.com/sca21002/angular-openlayers-directive.git#ubr-geo",
-    "angular-spinner": "~0.6.1"
+    "angular-spinner": "~0.6.1",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "ngMapApp",
+  "moduleName": "ubrGeoApp",
   "resolutions": {
     "angular": "1.4.1"
   }
