@@ -3,7 +3,7 @@
 describe('Service: libraryService', function () {
 
   // load the service's module
-  beforeEach(module('ngMapApp'));
+  beforeEach(module('ubrGeoApp'));
 
   // instantiate service
   var libraryService;
